feat(concurrency): crear módulo de threads y demostraciones de hilos virtuales y estructurados
    - Añadir submódulo 'threads' sobre hilos clásicos de plataforma y coordinación.
    - Añadir comparativa 'ThreadLocalVsScopedValueDemo' en scoped-values.
    - Añadir demo de cancelación y timeouts en concurrencia estructurada de Java 25.
    - Añadir demos de pool de conexiones, inanición CPU y servidor HttpServer en virtual.
    - Actualizar pom.xml, archivos README y VERSIONS.md.